# Horus

./: .gitignore  .gitmodules  01-dont-roll-your-own-crypto.md  01-missing-boundary-check-in-evm-transaction-decoding.md  01-missing-checks-for-address0x0.md  01-missing-validation-for-holdingperiodinseconds-in-nudgepointscampaigns.md  01-unhandled-chainlink-revert-can-lock-price-oracle-access.md  01-use-of-uniswaps-slot0-value-in-quoter-may-lead-to-volatile-estimates.md  02-for-pools-which-have-steth-as-the-deposit-token-switching-to-aave-strategy-wi.md  02-get_market-may-get-dossed-if-there-are-too-many-reserves.md  02-reduced-newton-raphson-iterations-easily-leads-to-slightly-incorrect-results-.md  03-any-minimum-reward-distribution-period-for-steth-pools-that-is-less-than-or-e.md  03-missing-uuid-uniqueness-validation-in-campaign-deployment.md  03-rinkeby-is-not-supported-for-chainlinks-vrf.md  04-if-a-deposit-pool-has-more-than-1-public-pools-connected-to-it-issues-will-oc.md  04-interchain-token-servicing-lacks-any-cancellationdeadlining-logic.md  04-maxdeposit-maxmint-maxredeem-and-maxwithdraw-functions-do-not-return-0-when-t.md  04-missing-zero-address-check-in-the-setter-functions-and-initializers.md  04-protocol-might-overvalue-the-asset-transferred-in-by-a-user-and-unintentional.md  04-the-current-pricefeedsol-could-become-completely-unavailable.md  05-deposituint256-assets-address-to-deposituint256-assets-address-to-uint256-min.md  05-missing-contract-existence-checks-before-low-level-calls.md  05-missing-rewardppq-validation-in-campaign-deployment-functions.md  (+6045 more)
(+7557 files in other folders)
